Bug fixes + Tab Colors

--- a/app/src/main/res/layout/fragment_meter.xml
+++ b/app/src/main/res/layout/fragment_meter.xml
@@ -54,7 +54,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/meter"
                 android:imeOptions="actionDone"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:selectAllOnFocus="true" />
 
         </android.support.design.widget.TextInputLayout>
