--- a/app/src/main/res/layout/fragment_feet.xml
+++ b/app/src/main/res/layout/fragment_feet.xml
@@ -107,7 +107,23 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text=""
-            android:textSize="48sp" />
+            android:textSize="32sp" />
+
+        <TextView
+            android:id="@+id/textFeet2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text=""
+            android:textSize="32sp" />
+
+        <TextView
+            android:id="@+id/textFeet3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text=""
+            android:textSize="32sp" />
 
 
     </LinearLayout>
