--- a/app/src/main/res/layout/fragment_kolu.xml
+++ b/app/src/main/res/layout/fragment_kolu.xml
@@ -1,125 +1,147 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="@dimen/activity_horizontal_margin">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
+    <data>
+
+        <variable
+            name="koluViewModel"
+            type="in.nowke.koluconvert.ui.kolu.KoluViewModel" />
+
+        <variable
+            name="fragment"
+            type="in.nowke.koluconvert.ui.kolu.FragmentKolu" />
+    </data>
+
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <RadioGroup
-            android:id="@+id/radio_kolu_type"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:orientation="horizontal">
-
-            <RadioButton
-                android:id="@+id/radio_kolu_type_madhur"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:checked="true"
-                android:text="@string/kolu_madhur" />
-
-            <RadioButton
-                android:id="@+id/radio_kolu_type_payyannur"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/kolu_payyannur" />
-
-        </RadioGroup>
+        android:layout_height="match_parent"
+        android:padding="@dimen/activity_horizontal_margin">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:baselineAligned="false"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/textinput_kolu"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_weight="1">
-
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/hint_kolu"
-                    android:imeOptions="actionNext"
-                    android:inputType="number"
-                    android:selectAllOnFocus="true" />
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/textinput_angula"
-                android:layout_width="0dp"
+            <RadioGroup
+                android:id="@+id/radio_kolu_type"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_weight="1">
+                android:orientation="horizontal">
 
-                <EditText
+                <RadioButton
+                    android:id="@+id/radio_kolu_type_madhur"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/hint_angula"
-                    android:imeOptions="actionDone"
-                    android:inputType="numberDecimal"
-                    android:selectAllOnFocus="true" />
-            </android.support.design.widget.TextInputLayout>
+                    android:layout_weight="1"
+                    android:checked="true"
+                    android:onClick="@{() -> koluViewModel.setKoluType(1)}"
+                    android:text="@string/kolu_madhur" />
+
+                <RadioButton
+                    android:id="@+id/radio_kolu_type_payyannur"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:onClick="@{() -> koluViewModel.setKoluType(2)}"
+                    android:text="@string/kolu_payyannur" />
+
+            </RadioGroup>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:baselineAligned="false"
+                android:orientation="horizontal">
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/textinput_kolu"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_weight="1">
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:afterTextChanged="@{() -> koluViewModel.convert() }"
+                        android:hint="@string/hint_kolu"
+                        android:imeOptions="actionNext"
+                        android:inputType="number"
+                        android:selectAllOnFocus="true"
+                        android:text="@={koluViewModel.kolu}" />
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/textinput_angula"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_weight="1">
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:afterTextChanged="@{() -> koluViewModel.convert()}"
+                        android:hint="@string/hint_angula"
+                        android:imeOptions="actionDone"
+                        android:inputType="numberDecimal"
+                        android:selectAllOnFocus="true"
+                        android:text="@={koluViewModel.angula}" />
+                </android.support.design.widget.TextInputLayout>
+
+            </LinearLayout>
+
+
+            <Button
+                android:id="@+id/buttonConvertKolu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:onClick="@{() -> fragment.onClickConvert()}"
+                android:paddingBottom="20dp"
+                android:paddingEnd="40dp"
+                android:paddingLeft="40dp"
+                android:paddingRight="40dp"
+                android:paddingStart="40dp"
+                android:paddingTop="20dp"
+                android:text="@string/button_convert" />
+
+            <TextView
+                android:id="@+id/textkolu_meter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:text="@{koluViewModel.textMeter}"
+                android:textSize="32sp" />
+
+            <TextView
+                android:id="@+id/textkolu_foot"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:text="@{koluViewModel.textFoot}"
+                android:textSize="32sp" />
+
+            <TextView
+                android:id="@+id/textkolu_kolu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:text="@{koluViewModel.textKolu}"
+                android:textSize="32sp" />
 
         </LinearLayout>
 
+    </android.support.v4.widget.NestedScrollView>
 
-        <Button
-            android:id="@+id/buttonConvertKolu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
-            android:paddingBottom="20dp"
-            android:paddingEnd="40dp"
-            android:paddingLeft="40dp"
-            android:paddingRight="40dp"
-            android:paddingStart="40dp"
-            android:paddingTop="20dp"
-            android:text="@string/button_convert" />
-
-        <TextView
-            android:id="@+id/textkolu_meter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
-            android:text="12.90m"
-            android:textSize="32sp" />
-
-        <TextView
-            android:id="@+id/textkolu_foot"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
-            android:text="12 inches"
-            android:textSize="32sp" />
-
-        <TextView
-            android:id="@+id/textkolu_kolu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
-            android:text="12 pk 14.4 ang"
-            android:textSize="32sp" />
-
-    </LinearLayout>
-
-</android.support.v4.widget.NestedScrollView>
+</layout>
