--- a/app/src/main/res/layout/fragment_foot.xml
+++ b/app/src/main/res/layout/fragment_foot.xml
@@ -1,131 +1,160 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="@dimen/activity_horizontal_margin">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
+    <data>
+
+        <import type="in.nowke.koluconvert.models.Units" />
+
+        <import type="android.view.View" />
+
+        <variable
+            name="footViewModel"
+            type="in.nowke.koluconvert.ui.foot.FootViewModel" />
+
+        <variable
+            name="fragment"
+            type="in.nowke.koluconvert.ui.foot.FootFragment" />
+    </data>
+
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <RadioGroup
-            android:id="@+id/radio_foot_type"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:orientation="horizontal">
-
-            <RadioButton
-                android:id="@+id/radio_foot_type_foot"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:checked="true"
-                android:text="@string/radio_text_foot" />
-
-            <RadioButton
-                android:id="@+id/radio_foot_type_square"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/radio_text_square" />
-
-            <RadioButton
-                android:id="@+id/radio_foot_type_cube"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/radio_text_cubic" />
-
-        </RadioGroup>
+        android:layout_height="match_parent"
+        android:padding="@dimen/activity_horizontal_margin">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:baselineAligned="false"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/textinput_foot"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_weight="1">
-
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/hint_foot"
-                    android:imeOptions="actionNext"
-                    android:inputType="number"
-                    android:selectAllOnFocus="true" />
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/textinput_inch"
-                android:layout_width="0dp"
+            <RadioGroup
+                android:id="@+id/radio_foot_type"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_weight="1">
+                android:orientation="horizontal">
 
-                <EditText
+                <RadioButton
+                    android:id="@+id/radio_foot_type_foot"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/hint_inch"
-                    android:imeOptions="actionDone"
-                    android:inputType="numberDecimal"
-                    android:selectAllOnFocus="true" />
-            </android.support.design.widget.TextInputLayout>
+                    android:layout_weight="1"
+                    android:checked="true"
+                    android:onClick="@{() -> footViewModel.setFootType(1)}"
+                    android:text="@string/radio_text_foot" />
+
+                <RadioButton
+                    android:id="@+id/radio_foot_type_square"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:onClick="@{() -> footViewModel.setFootType(2)}"
+                    android:text="@string/radio_text_square" />
+
+                <RadioButton
+                    android:id="@+id/radio_foot_type_cube"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:onClick="@{() -> footViewModel.setFootType(3)}"
+                    android:text="@string/radio_text_cubic" />
+
+            </RadioGroup>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:baselineAligned="false"
+                android:orientation="horizontal">
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/textinput_foot"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_weight="1">
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:afterTextChanged="@{() -> footViewModel.convert() }"
+                        android:hint="@string/hint_foot"
+                        android:imeOptions="actionNext"
+                        android:inputType="number"
+                        android:selectAllOnFocus="true"
+                        android:text="@={footViewModel.foot}" />
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/textinput_inch"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_weight="1"
+                    android:visibility="@{footViewModel.footType == Units.FOOT ? View.VISIBLE : View.INVISIBLE}">
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:afterTextChanged="@{() -> footViewModel.convert()}"
+                        android:hint="@string/hint_inch"
+                        android:imeOptions="actionDone"
+                        android:inputType="numberDecimal"
+                        android:selectAllOnFocus="true"
+                        android:text="@={footViewModel.inch}" />
+                </android.support.design.widget.TextInputLayout>
+
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/buttonConvertFoot"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:onClick="@{() -> fragment.onClickConvert()}"
+                android:paddingBottom="20dp"
+                android:paddingEnd="40dp"
+                android:paddingLeft="40dp"
+                android:paddingRight="40dp"
+                android:paddingStart="40dp"
+                android:paddingTop="20dp"
+                android:text="@string/button_convert" />
+
+            <TextView
+                android:id="@+id/textfoot_meter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:text="@{footViewModel.textMeter}"
+                android:textSize="32sp" />
+
+            <TextView
+                android:id="@+id/textfoot_madhur"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:text="@{footViewModel.textMadhur}"
+                android:textSize="32sp"
+                android:visibility="@{footViewModel.footType == Units.FOOT ? View.VISIBLE : View.INVISIBLE}" />
+
+            <TextView
+                android:id="@+id/textfoot_payyannur"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:text="@{footViewModel.textPayyannur}"
+                android:textSize="32sp"
+                android:visibility="@{footViewModel.footType == Units.FOOT ? View.VISIBLE : View.INVISIBLE}" />
 
         </LinearLayout>
 
-        <Button
-            android:id="@+id/buttonConvertFoot"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
-            android:paddingBottom="20dp"
-            android:paddingEnd="40dp"
-            android:paddingLeft="40dp"
-            android:paddingRight="40dp"
-            android:paddingStart="40dp"
-            android:paddingTop="20dp"
-            android:text="@string/button_convert" />
-
-        <TextView
-            android:id="@+id/textfoot_meter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
-            android:text="12.90m"
-            android:textSize="32sp" />
-
-        <TextView
-            android:id="@+id/textfoot_madhur"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
-            android:text="12 mk 12.2 ang"
-            android:textSize="32sp" />
-
-        <TextView
-            android:id="@+id/textfoot_payyannur"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
-            android:text="12 pk 14.4 ang"
-            android:textSize="32sp" />
-
-    </LinearLayout>
-
-</android.support.v4.widget.NestedScrollView>
+    </android.support.v4.widget.NestedScrollView>
+</layout>
