--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,12 @@
     <color name="colorPrimaryDark">@color/material_teal_700</color>
     <color name="colorAccent">@color/material_red_A200</color>
 
+    <color name="colorOrangePrimary">@color/material_orange_500</color>
+    <color name="colorOrangePrimaryDark">@color/material_orange_700</color>
+
+    <color name="colorBluePrimary">@color/material_blue_500</color>
+    <color name="colorBluePrimaryDark">@color/material_blue_700</color>
+
     <color name="window_background">#FFF5F5F5</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="transparent">@android:color/transparent</color>
