--- a/app/src/main/res/layout/fragment_meter.xml
+++ b/app/src/main/res/layout/fragment_meter.xml
@@ -68,6 +68,7 @@
                 android:layout_marginTop="8dp">
 
                 <EditText
+                    android:id="@+id/edittext_meter"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:afterTextChanged="@{() -> meterViewModel.convert() }"
