--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">@color/material_teal_500</color>
-    <color name="colorPrimaryDark">@color/material_teal_700</color>
-    <color name="colorAccent">@color/material_red_A200</color>
+    <color name="colorPrimary">#009688</color>
+    <color name="colorPrimaryDark">#00796b</color>
+    <color name="colorAccent">#ff5252</color>
 
-    <color name="colorOrangePrimary">@color/material_orange_500</color>
-    <color name="colorOrangePrimaryDark">@color/material_orange_700</color>
+    <color name="colorOrangePrimary">#ff9800</color>
+    <color name="colorOrangePrimaryDark">#f57c00</color>
 
-    <color name="colorBluePrimary">@color/material_blue_500</color>
-    <color name="colorBluePrimaryDark">@color/material_blue_700</color>
+    <color name="colorBluePrimary">#2196f3</color>
+    <color name="colorBluePrimaryDark">#1976d2</color>
 
     <color name="window_background">#FFF5F5F5</color>
     <color name="colorWhite">#FFFFFF</color>
